ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.1, 4.7.0
    • Affects Version/s: 4.4.0
    • Component/s: Storage, Upgrade/Downgrade
    • Environment:
      dvlp
      oracle linux 6.9
      running on kernel 2.6.32-696.el6.x86_64
    • Fully Compatible
    • ALL
    • v4.4
    • Execution Team 2020-08-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-32027, MongoDB 3.6 began adding the "wall" field to all oplog entries. The presence of oplog entries lacking this field causes MongoDB 4.4.0 to crash on startup with:

      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"F",  "c":"-",        "id":23079,   *"ctx":"initandlisten","msg":"Invariant failure","attr": {"expr":"_oplogManagerCount > 0","file":"src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp","line":2467}} 
      

      In summary: MongoDB 4.4 crashes if any documents in the oplog have not been generated by versions 3.6+.

      If a rapid upgrade is truly necessary, this issue can be avoided by fully resyncing all nodes after upgrading from 3.4 but before upgrading to 4.4.

      Note: Because sharded config server replica sets receive relatively few write operations, they can often hold older oplog entries than other replica sets.

      To determine if a deployment is vulnerable, run the following to inspect the oldest document in the oplog:

      use local
      db.oplog.rs.findOne().wall
      

      If this command returns a Date (any date), the deployment is not vulnerable:

      ISODate("2020-08-10T17:41:26.248Z")
      

      If this command returns no data, then upgrading to 4.4 will fail.

      original description

      Hello,

      We have a sharded cluster with 1 member config replica set and 2 x 1 member shard replica sets with 1 mongos running in our dvlp env.

      We have successfully upgrade the cluster from 4.0.9 to 4.2.8 following below document 

      https://docs.mongodb.com/manual/release-notes/4.2-upgrade-sharded-cluster

      But when we start the upgrade process  to 4.4 from 4.2.8 we came across following issue.

      https://docs.mongodb.com/manual/release-notes/4.4-upgrade-sharded-cluster/#upgrade-process

      • confirmed fcv is set to 4.2
      • disable balancer
      • stopped config server (1 member) running on 4.2.8 binaries

      while starting the config servers on 4.4.0 binaries it failed.

      about to fork child process, waiting until server is ready for connections.
      forked process: 17863
      ERROR: child process failed, exited with 51
      To see additional information in this output, start without the "--fork" option.
      

      I looked in the mongo log for config and it errored out with invariant failure.

      Is there anything we else we can look for to fix this?
       

      {"t":{"$date":"2020-08-06T12:53:39.624+02:00"},"s":"W",  "c":"CONTROL",  "id":20698,   "ctx":"main","msg":"***** SERVER RESTARTED *****","tags":["startupWarnings"]}
      {"t":{"$date":"2020-08-06T12:53:39.624+02:00"},"s":"I",  "c":"CONTROL",  "id":23285,   "ctx":"main","msg":"Automatically disabling TLS 1.0, to force-enable TLS 1.0 specify --sslDisabledProtocols 'none'"}
      {"t":{"$date":"2020-08-06T12:53:39.630+02:00"},"s":"W",  "c":"ASIO",     "id":22601,   "ctx":"main","msg":"No TransportLayer configured during NetworkInterface startup"}
      {"t":{"$date":"2020-08-06T12:53:39.630+02:00"},"s":"I",  "c":"NETWORK",  "id":4648602, "ctx":"main","msg":"Implicit TCP FastOpen in use."}
      {"t":{"$date":"2020-08-06T12:53:39.631+02:00"},"s":"I",  "c":"STORAGE",  "id":4615611, "ctx":"initandlisten","msg":"MongoDB starting","attr":{"pid":8961,"port":28017,"dbPath":"/ctr/trademarkrepository/configsvr/data","architecture":"64-bit","host":"deng-pl110"}}
      {"t":{"$date":"2020-08-06T12:53:39.631+02:00"},"s":"I",  "c":"CONTROL",  "id":23403,   "ctx":"initandlisten","msg":"Build Info","attr":{"buildInfo":{"version":"4.4.0","gitVersion":"563487e100c4215e2dce98d0af2a6a5a2d67c5cf","openSSLVersion":"OpenSSL 1.0.1e-fips 11 Feb 2013","modules":[],"allocator":"tcmalloc","environment":{"distmod":"rhel62","distarch":"x86_64","target_arch":"x86_64"}}}}
      {"t":{"$date":"2020-08-06T12:53:39.631+02:00"},"s":"I",  "c":"CONTROL",  "id":51765,   "ctx":"initandlisten","msg":"Operating System","attr": {"os":{"name":"Oracle Linux Server release 6.9","version":"Kernel 2.6.32-696.el6.x86_64"}}}
      {"t":{"$date":"2020-08-06T12:53:39.631+02:00"},"s":"I",  "c":"CONTROL",  "id":21951,   "ctx":"initandlisten","msg":"Options set by command line","attr": {"options":{"config":"/ctr/trademarkrepository/configsvr/data/automation-mongod.conf","net":{"bindIp":"0.0.0.0","port":28017},"processManagement": {"fork":true},"replication": {"replSetName":"ConfigReplSet"},"sharding": {"clusterRole":"configsvr"},"storage": {"dbPath":"/ctr/trademarkrepository/configsvr/data","engine":"wiredTiger","wiredTiger":{"engineConfig":{"cacheSizeGB":4.0}}},"systemLog": {"destination":"file","logAppend":true,"logRotate":"reopen","path":"/ctr/trademarkrepository/configsvr/log/mongod.log"}}}} 
      {"t":{"$date":"2020-08-06T12:53:39.634+02:00"},"s":"I",  "c":"STORAGE",  "id":22297,   "ctx":"initandlisten","msg":"Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See [http://dochub.mongodb.org/core/prodnotes-filesystem","tags":["startupWarnings"]}|http://dochub.mongodb.org/core/prodnotes-filesystem%22,%22tags%22:[%22startupWarnings%22]%7D] 
      {"t":{"$date":"2020-08-06T12:53:39.634+02:00"},"s":"I",  "c":"STORAGE",  "id":22315,   "ctx":"initandlisten","msg":"Opening WiredTiger","attr": {"config":"create,cache_size=4096M,session_max=33000,eviction=(threads_min=4,threads_max=4),config_base=false,statistics=(fast),log=(enabled=true,archive=true,path=journal,compressor=snappy),file_manager=(close_idle_time=100000,close_scan_interval=10,close_handle_minimum=250),statistics_log=(wait=0),verbose=[recovery_progress,checkpoint_progress,compact_progress],"}} 
      {"t":{"$date":"2020-08-06T12:53:40.222+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:222207][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY_PROGRESS] Recovering log 8 through 9"}} 
      {"t":{"$date":"2020-08-06T12:53:40.285+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:285073][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY_PROGRESS] Recovering log 9 through 9"}} 
      {"t":{"$date":"2020-08-06T12:53:40.402+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:402276][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY | WT_VERB_RECOVERY_PROGRESS] Main recovery loop: starting at 8/384 to 9/256"}} 
      {"t":{"$date":"2020-08-06T12:53:40.285+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:285073][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY_PROGRESS] Recovering log 9 through 9"}} 
      {"t":{"$date":"2020-08-06T12:53:40.402+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:402276][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY | WT_VERB_RECOVERY_PROGRESS] Main recovery loop: starting at 8/384 to 9/256"}} 
      {"t":{"$date":"2020-08-06T12:53:40.402+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:402678][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY_PROGRESS] Recovering log 8 through 9"}} 
      {"t":{"$date":"2020-08-06T12:53:40.483+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:483038][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY_PROGRESS] Recovering log 9 through 9"}} 
      {"t":{"$date":"2020-08-06T12:53:40.548+02:00"},"s":"I",  "c":"STORAGE",  "id":22430,   "ctx":"initandlisten","msg":"WiredTiger message","attr": {"message":"[1596711220:548195][8961:0x7fc5477bfb40], txn-recover: [WT_VERB_RECOVERY | WT_VERB_RECOVERY_PROGRESS] Set global recovery timestamp: (1596710764, 2)"}} 
      {"t":{"$date":"2020-08-06T12:53:40.614+02:00"},"s":"I",  "c":"STORAGE",  "id":4795906, "ctx":"initandlisten","msg":"WiredTiger opened","attr": {"durationMillis":980}} 
      {"t":{"$date":"2020-08-06T12:53:40.614+02:00"},"s":"I",  "c":"RECOVERY", "id":23987,   "ctx":"initandlisten","msg":"WiredTiger recoveryTimestamp","attr": {"recoveryTimestamp":{"$timestamp":{"t":1596710764,"i":2}}}} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"I",  "c":"STORAGE",  "id":22383,   "ctx":"initandlisten","msg":"The size storer reports that the oplog contains","attr": {"numRecords":35593,"dataSize":5050117}} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"I",  "c":"STORAGE",  "id":22386,   "ctx":"initandlisten","msg":"Sampling the oplog to determine where to place markers for truncation"} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"I",  "c":"STORAGE",  "id":22389,   "ctx":"initandlisten","msg":"Sampling from the oplog to determine where to place markers for truncation","attr": {"from":{"$timestamp":{"t":1539197546,"i":3}},"to": {"$timestamp":{"t":1539249669,"i":3}}}} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"I",  "c":"STORAGE",  "id":22390,   "ctx":"initandlisten","msg":"Taking samples and assuming each oplog section contains","attr": {"numSamples":96,"containsNumRecords":3696,"containsNumBytes":524407}} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"I",  "c":"STORAGE",  "id":22382,   "ctx":"initandlisten","msg":"WiredTiger record store oplog processing finished","attr": {"durationMillis":0}} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"F",  "c":"-",        "id":23079,   *"ctx":"initandlisten","msg":"Invariant failure","attr": {"expr":"_oplogManagerCount > 0","file":"src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp","line":2467}} 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"F",  "c":"-",        "id":23080,   "ctx":"initandlisten","msg":"\n\n***aborting after invariant() failure\n\n"}* 
      {"t":{"$date":"2020-08-06T12:53:40.616+02:00"},"s":"F",  "c":"CONTROL",  "id":4757800, "ctx":"initandlisten","msg":"Writing fatal message","attr": {"message":"Got signal: 6 (Aborted).\n"}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31431,   "ctx":"initandlisten","msg":"BACKTRACE:  {bt}","attr": {"bt":{"backtrace":[{"a":"7FC54A497D91","b":"7FC5477DF000","o":"2CB8D91","s":"_ZN5mongo18stack_trace_detail12_GLOBAL__N_119printStackTraceImplERKNS1_7OptionsEPNS_14StackTraceSinkE.constprop.606","s+":"1E1"}, {"a":"7FC54A499439","b":"7FC5477DF000","o":"2CBA439","s":"_ZN5mongo15printStackTraceEv","s+":"29"}, {"a":"7FC54A496C26","b":"7FC5477DF000","o":"2CB7C26","s":"_ZN5mongo12_GLOBAL__N_116abruptQuitActionEiP7siginfoPv","s+":"66"}, {"a":"7FC545E277E0","b":"7FC545E18000","o":"F7E0","s":"_L_unlock_16","s+":"2D"}, {"a":"7FC545AB64F5","b":"7FC545A84000","o":"324F5","s":"gsignal","s+":"35"}, {"a":"7FC545AB7CD5","b":"7FC545A84000","o":"33CD5","s":"abort","s+":"175"}, {"a":"7FC5486E1C55","b":"7FC5477DF000","o":"F02C55","s":"_ZN5mongo15invariantFailedEPKcS1_j","s+":"12C"}, {"a":"7FC5483C9536","b":"7FC5477DF000","o":"BEA536","s":"_ZN5mongo18WiredTigerKVEngine16haltOplogManagerEv.cold.1904","s+":"18"}, {"a":"7FC54880211C","b":"7FC5477DF000","o":"102311C","s":"_ZN5mongo21WiredTigerRecordStoreD1Ev","s+":"2FC"}, {"a":"7FC54880868B","b":"7FC5477DF000","o":"102968B","s":"_ZN5mongo29StandardWiredTigerRecordStoreD0Ev","s+":"1B"}, {"a":"7FC5483C9CDB","b":"7FC5477DF000","o":"BEACDB","s":"_ZN5mongo18WiredTigerKVEngine21getGroupedRecordStoreEPNS_16OperationContextENS_10StringDataES3_RKNS_17CollectionOptionsENS_8KVPrefixE.cold.1921","s+":"57"}, {"a":"7FC549073A36","b":"7FC5477DF000","o":"1894A36","s":"_ZN5mongo17StorageEngineImpl15_initCollectionEPNS_16OperationContextENS_8RecordIdERKNS_15NamespaceStringEb","s+":"316"}, {"a":"7FC54907577D","b":"7FC5477DF000","o":"189677D","s":"_ZN5mongo17StorageEngineImpl11loadCatalogEPNS_16OperationContextE","s+":"90D"}, {"a":"7FC549079390","b":"7FC5477DF000","o":"189A390","s":"_ZN5mongo17StorageEngineImplC1EPNS_8KVEngineENS_20StorageEngineOptionsE","s+":"270"}, {"a":"7FC5487C2FE5","b":"7FC5477DF000","o":"FE3FE5","s":"_ZNK5mongo12_GLOBAL__N_117WiredTigerFactory6createERKNS_19StorageGlobalParamsEPKNS_21StorageEngineLockFileE","s+":"1A5"}, {"a":"7FC5490839AE","b":"7FC5477DF000","o":"18A49AE","s":"_ZN5mongo23initializeStorageEngineEPNS_14ServiceContextENS_22StorageEngineInitFlagsE","s+":"4CE"}, {"a":"7FC54877F577","b":"7FC5477DF000","o":"FA0577","s":"_ZN5mongo12_GLOBAL__N_114_initAndListenEPNS_14ServiceContextEi.isra.1409","s+":"3F7"}, {"a":"7FC548783600","b":"7FC5477DF000","o":"FA4600","s":"_ZN5mongo12_GLOBAL__N_111mongoDbMainEiPPcS2_","s+":"650"}, {"a":"7FC5486F2839","b":"7FC5477DF000","o":"F13839","s":"main","s+":"9"}, {"a":"7FC545AA2D20","b":"7FC545A84000","o":"1ED20","s":"__libc_start_main","s+":"100"}, {"a":"7FC54877EA01","b":"7FC5477DF000","o":"F9FA01","s":"_start","s+":"29"}],"processInfo": {"mongodbVersion":"4.4.0","gitVersion":"563487e100c4215e2dce98d0af2a6a5a2d67c5cf","compiledModules":[],"uname":{"sysname":"Linux","release":"2.6.32-696.el6.x86_64","version":"#1 SMP Wed Mar 22 14:27:19 PDT 2017","machine":"x86_64"},"somap":[ {"b":"7FC5477DF000","elfType":3,"buildId":"9A85C620AD954CD5836D247C61661AFDDF2FF039"}]}}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54A497D91","b":"7FC5477DF000","o":"2CB8D91","s":"_ZN5mongo18stack_trace_detail12_GLOBAL__N_119printStackTraceImplERKNS1_7OptionsEPNS_14StackTraceSinkE.constprop.606","s+":"1E1"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54A499439","b":"7FC5477DF000","o":"2CBA439","s":"_ZN5mongo15printStackTraceEv","s+":"29"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54A496C26","b":"7FC5477DF000","o":"2CB7C26","s":"_ZN5mongo12_GLOBAL__N_116abruptQuitActionEiP7siginfoPv","s+":"66"}}}
      {"t": {"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54A499439","b":"7FC5477DF000","o":"2CBA439","s":"_ZN5mongo15printStackTraceEv","s+":"29"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54A496C26","b":"7FC5477DF000","o":"2CB7C26","s":"_ZN5mongo12_GLOBAL__N_116abruptQuitActionEiP7siginfoPv","s+":"66"}}}  
      {"t": {"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC545E277E0","b":"7FC545E18000","o":"F7E0","s":"_L_unlock_16","s+":"2D"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC545AB64F5","b":"7FC545A84000","o":"324F5","s":"gsignal","s+":"35"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC545AB7CD5","b":"7FC545A84000","o":"33CD5","s":"abort","s+":"175"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC5486E1C55","b":"7FC5477DF000","o":"F02C55","s":"_ZN5mongo15invariantFailedEPKcS1_j","s+":"12C"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC5483C9536","b":"7FC5477DF000","o":"BEA536","s":"_ZN5mongo18WiredTigerKVEngine16haltOplogManagerEv.cold.1904","s+":"18"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54880211C","b":"7FC5477DF000","o":"102311C","s":"_ZN5mongo21WiredTigerRecordStoreD1Ev","s+":"2FC"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54880868B","b":"7FC5477DF000","o":"102968B","s":"_ZN5mongo29StandardWiredTigerRecordStoreD0Ev","s+":"1B"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC5483C9CDB","b":"7FC5477DF000","o":"BEACDB","s":"_ZN5mongo18WiredTigerKVEngine21getGroupedRecordStoreEPNS_16OperationContextENS_10StringDataES3_RKNS_17CollectionOptionsENS_8KVPrefixE.cold.1921","s+":"57"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC549073A36","b":"7FC5477DF000","o":"1894A36","s":"_ZN5mongo17StorageEngineImpl15_initCollectionEPNS_16OperationContextENS_8RecordIdERKNS_15NamespaceStringEb","s+":"316"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54907577D","b":"7FC5477DF000","o":"189677D","s":"_ZN5mongo17StorageEngineImpl11loadCatalogEPNS_16OperationContextE","s+":"90D"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC549079390","b":"7FC5477DF000","o":"189A390","s":"_ZN5mongo17StorageEngineImplC1EPNS_8KVEngineENS_20StorageEngineOptionsE","s+":"270"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC5487C2FE5","b":"7FC5477DF000","o":"FE3FE5","s":"_ZNK5mongo12_GLOBAL__N_117WiredTigerFactory6createERKNS_19StorageGlobalParamsEPKNS_21StorageEngineLockFileE","s+":"1A5"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC5490839AE","b":"7FC5477DF000","o":"18A49AE","s":"_ZN5mongo23initializeStorageEngineEPNS_14ServiceContextENS_22StorageEngineInitFlagsE","s+":"4CE"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54877F577","b":"7FC5477DF000","o":"FA0577","s":"_ZN5mongo12_GLOBAL__N_114_initAndListenEPNS_14ServiceContextEi.isra.1409","s+":"3F7"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC548783600","b":"7FC5477DF000","o":"FA4600","s":"_ZN5mongo12_GLOBAL__N_111mongoDbMainEiPPcS2_","s+":"650"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC5486F2839","b":"7FC5477DF000","o":"F13839","s":"main","s+":"9"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC545AA2D20","b":"7FC545A84000","o":"1ED20","s":"__libc_start_main","s+":"100"}}} 
      {"t":{"$date":"2020-08-06T12:53:40.702+02:00"},"s":"I",  "c":"CONTROL",  "id":31427,   "ctx":"initandlisten","msg":"  Frame:  {frame}","attr": {"frame":{"a":"7FC54877EA01","b":"7FC5477DF000","o":"F9FA01","s":"_start","s+":"29"}}}  
       

       

        1. config_mongod_log.gz
          6.63 MB
        2. metrics.2020-08.tgz
          35.18 MB

            Assignee:
            Gregory Noma
            Reporter:
            Kin Wai Cheung (EXT)
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: