SERVER-50137 Use timestamp if wall field not present when calculating oplog stones

(cherry picked from commit 5be60b26dd703f8360157d074de889d0495cab6a)